--- a/tools/custom-organization-policy-library/values_detective.yaml
+++ b/tools/custom-organization-policy-library/values_detective.yaml
@@ -19,8 +19,4 @@ bundles:
   pci-dss: false
   cis: false
 dryrun: false
-gke:
-  gkeAllowedNodePoolImages:
-    params:
-      images:
-      - "COS_CONTAINERD"
+gke: {}
