--- a/tools/custom-organization-policy-library/values_detective.yaml
+++ b/tools/custom-organization-policy-library/values_detective.yaml
@@ -20,6 +20,9 @@ bundles:
   cis: false
 dryrun: false
 artifactRegistry: {}
-bigQuery: {}
+bigquery:
+  bigqueryAllowedTableExpiration:
+    params:
+      min_table_expiration_ms: 2592000000 #! 1 month
 cloudFunctions: {}
 gke: {}
