--- a/tools/custom-organization-policy-library/values_detective.yaml
+++ b/tools/custom-organization-policy-library/values_detective.yaml
@@ -19,7 +19,7 @@ bundles:
   pci-dss: false
   cis: false
 dryrun: false
-artifactRegistry: {}
+artifactregistry: {}
 bigquery:
   bigqueryAllowedTableExpiration:
     params:
