--- a/tools/custom-organization-policy-library/values_detective.yaml
+++ b/tools/custom-organization-policy-library/values_detective.yaml
@@ -24,5 +24,5 @@ bigquery:
   bigqueryAllowedTableExpiration:
     params:
       min_table_expiration_ms: 2592000000 #! 1 month
-cloudFunctions: {}
+cloudfunctions: {}
 gke: {}
