fix: add parameters for cloudrun, resource manager and cloudsql

--- a/tools/custom-organization-policy-library/samples/gcloud/sha/cloudresourcemanager/cloudresourcemanagerRequiredProjectLabels.yaml
+++ b/tools/custom-organization-policy-library/samples/gcloud/sha/cloudresourcemanager/cloudresourcemanagerRequiredProjectLabels.yaml
@@ -5,4 +5,4 @@ resource_selector:
   resource_types:
   - cloudresourcemanager.googleapis.com/Project
 predicate:
-  expression: (!['bu', 'app', 'env'].all(required_label, resource.labels.exists(label, label.matches(required_label))))
+  expression: (!["bu", "app", "env"].all(required_label, resource.labels.exists(label, label.matches(required_label))))
