--- a/tools/custom-organization-policy-library/samples/gcloud/sha/cloudsql/cloudsqlAllowedDatabaseEngineVersions.yaml
+++ b/tools/custom-organization-policy-library/samples/gcloud/sha/cloudsql/cloudsqlAllowedDatabaseEngineVersions.yaml
@@ -5,4 +5,4 @@ resource_selector:
   resource_types:
   - sqladmin.googleapis.com/Instance
 predicate:
-  expression: (!['MYSQL_8_0', 'POSTGRES_17', 'SQLSERVER_2022_WEB'].exists(version, version.matches(resource.databaseVersion)))
+  expression: (!["MYSQL_8_0", "POSTGRES_17", "SQLSERVER_2022_WEB"].exists(version, version.matches(resource.databaseVersion)))
