--- a/tools/custom-organization-policy-library/values_detective.yaml
+++ b/tools/custom-organization-policy-library/values_detective.yaml
@@ -43,4 +43,24 @@ cloudkms:
   cloudkmsAllowedRotationPeriod:
     params:
       min_rotation_period: 31536000s  #! 1 year
+cloudresourcemanager:
+  cloudresourcemanagerRequiredProjectLabels:
+    params:
+      labels:
+      - "bu"
+      - "app"
+      - "env"
+cloudrun:
+  cloudrunAllowedDomainMapping:
+    params:
+      domains:
+      - "mydomain.com"
+      - "mysite.com"
+cloudsql:
+  cloudsqlAllowedDatabaseEngineVersions:
+    params:
+      database_versions:
+      - "MYSQL_8_0"
+      - "POSTGRES_17"
+      - "SQLSERVER_2022_WEB"
 gke: {}
