--- a/tools/custom-organization-policy-library/samples/gcloud/sha/compute/computeAllowedVPNGatewayProjects.yaml
+++ b/tools/custom-organization-policy-library/samples/gcloud/sha/compute/computeAllowedVPNGatewayProjects.yaml
@@ -5,4 +5,4 @@ resource_selector:
   resource_types:
   - compute.googleapis.com/VpnGateway
 predicate:
-  expression: (!["hybrid-networking-nprd", "hybrid-networking-prd"].exists(prj, resource.network.startsWith('https://www.googleapis.com/compute/v1/projects/' + prj)))
+  expression: (!["myproject1", "myproject2"].exists(prj, resource.network.startsWith("https://www.googleapis.com/compute/v1/projects/" + prj)))
