--- a/tools/custom-organization-policy-library/values_detective.yaml
+++ b/tools/custom-organization-policy-library/values_detective.yaml
@@ -63,4 +63,15 @@ cloudsql:
       - "MYSQL_8_0"
       - "POSTGRES_17"
       - "SQLSERVER_2022_WEB"
+compute:
+  computeAllowedLoadBalancerTypes:
+    params:
+      load_balancer_types:
+      - "INTERNAL"
+      - "INTERNAL_MANAGED"
+  computeAllowedVPNGatewayProjects:
+    params:
+      projects:
+      - "myproject1"
+      - "myproject2"
 gke: {}
