--- a/tools/custom-organization-policy-library/samples/gcloud/sha/secretmanager/secretmanagerAllowedTopics.yaml
+++ b/tools/custom-organization-policy-library/samples/gcloud/sha/secretmanager/secretmanagerAllowedTopics.yaml
@@ -5,4 +5,4 @@ resource_selector:
   resource_types:
   - secretmanager.googleapis.com/Secret
 predicate:
-  expression: (!resource.topics.all(t, ['secret-manager-test-topic'].exists(topic, t.name.endsWith('/topics/' + topic))))
+  expression: (!resource.topics.all(t,["topic-1", "topic-2"].exists(topic, t.name.endsWith("/topics/" + topic))))
