feat: adding test for mysql and postgresql

--- a/tools/custom-organization-policy-library/test/pytest.ini
+++ b/tools/custom-organization-policy-library/test/pytest.ini
@@ -4,6 +4,9 @@ log_cli_level = DEBUG
 render_collapsed = passed, failed, error
 addopts = --html=report.html --self-contained-html
 markers = 
+    cloudsql
+    mysql
+    postgresql
     storage
     gke
 
